#  NAME:    CHANGES
#  PLACE:   ./
#  DESC:    The vEMan changelog
# 			Entries beginning with an exclamation mark (!) are either important,
#			heavy changes or very useful changes in vEMan
###################################################################################################################

vEMan History
-----------------------------------------

MASTER // MASTER
		new: added a skip-button for creating vEMan desktop icon when installing
		new(!): introducing the first official vEMan Compendium!!!! Check it out on the project page.
		fix: license was not displayed correctly on smaller screens.. 
		new: changed development CVS tool to GIT instead of SVN. GIT is so damn great.. 
		new: identical info header in all important documents
		new(!): added a TROUBLEshooting file with important hints if you run into problems
				AND: cleaned up README, UPGRADE, INSTALL accordingly
		fix: Download-links for OVFtool
		new: easy howto for Ubuntu added to INSTALL documentation
		fix(!): re-coded ovftool handling because v2.0.1 was removed by VMware
		new(!): added a brain for target servers you already contacted. it will
			also show the last used server preselected for your convenience.
			I like it so much ;o)
		new(!): introduced an XML parser we need for the VM Editor - because of this and because
			 vEMan will base on python in the future I change the requirements.
			 from now on python at least v2.5 is a requirement for running all functions of vEMan
			 This XML parser gives a little speed improvement when displaying the VMs information.
		fix: some vars cleaning in sysvars_vEMan.cfgs
		new(!): WHEN UPGRADING - READ THE UPGRADE GUIDE! The uservars_vEMan.cfg have changed!!!!!
		new: fixed fileaccess.pl because it returns absolutely no errorcode as return value. "Great" work VMware..
		fix: be more tolerant when deploying OVF/OVA
		new: added cpu core detection of ESX in hostinfo.pl
		new: added a generic check for the power state as a new module