@@ -63,3 +63,4 @@ XVMDEL="$HOSTCLIPATH/removeVM.pl"                   # removes a VM completely
 XHOSTDS="$HOSTCLIPATH/dsbrowse.pl"                  # display datastorage information
 XHOSTINF="$HOSTCLIPATH/hostinfo.pl"                 # display host information
 XFILEACC="$GENCLIPATH/fileaccess.pl"                # path to fileaccess.pl needed for fetching and putting files and configs
+XHOSTOPS="$HOSTCLIPATH/hostops.pl"                   # do host operations
