@@ -65,7 +65,7 @@ else
 fi
 
 # comma separated list of valid functions
-VALIDFUNCS="F_CHKPWR,F_CHKESXVER,F_MGUSR,F_ADDUSR,F_MSG,F_CHGUSR,F_USERMGR,F_REVIEWER,F_NOTREADY,F_SCANNET,F_SCANDS,F_HOSTMGR,F_SAVEOVFSET,F_VERSION,F_HELP,F_SNAPMGR,F_VMEDITOR,F_VMMGR,F_POWERACT,F_MAINLOOP,F_ACTIONS,F_AUTH,F_CHKCFG,F_CONSOLEMGR,F_CRTCOOKIE,F_CRTVMLIST,F_DEPLOVF,F_DEPLVMX,F_DETECTVNC,F_DISABLEVNC,F_ENABLEVNC,F_ERR,F_ESXMGR,F_GETCFG,F_GETFREEPORT,F_GETVMMANUAL,F_GETVMPATH,F_LOGIN,F_MKCFG,F_MKOVFCFG,F_OPENCONSOLE,F_POWER,F_SELECTVM,F_SPACECONV,F_SUSPEND,F_PARENTF,F_DEC,F_DELETEVM"
+VALIDFUNCS="F_CHKPWR,F_CHKESXVER,F_MGUSR,F_ADDUSR,F_MSG,F_CHGUSR,F_USERMGR,F_REVIEWER,F_NOTREADY,F_SCANNET,F_SCANDS,F_HOSTMGR,F_SAVEOVFSET,F_VERSION,F_HELP,F_SNAPMGR,F_VMEDITOR,F_VMMGR,F_POWERACT,F_MAINLOOP,F_ACTIONS,F_AUTH,F_CHKCFG,F_CONSOLEMGR,F_CRTCOOKIE,F_CRTVMLIST,F_DEPLOVF,F_DEPLVMX,F_DETECTVNC,F_DISABLEVNC,F_ENABLEVNC,F_ERR,F_ESXMGR,F_GETCFG,F_GETFREEPORT,F_GETVMMANUAL,F_GETVMPATH,F_LOGIN,F_MKCFG,F_MKOVFCFG,F_OPENCONSOLE,F_POWER,F_SELECTVM,F_SPACECONV,F_SUSPEND,F_PARENTF,F_DEC,F_DELETEVM,F_DEPLCHOOSER,F_DEPLNEW,F_ESXOPER"
 # update the above list when adding a new function!
 # not the best way but an example is:
 # egrep "F_.*()" libs/runFUNCTION.vEMan|grep -v "bash"|grep -v VALIDFUNCS |egrep -v "F_ERR \"" |grep -v echo |sed s/[[:space:]]//g |grep -v "#" |sort |sed 's/(//g;s/)//g' |uniq |tr "\n" ","
@@ -75,6 +75,7 @@ VALIDFUNCS="F_CHKPWR,F_CHKESXVER,F_MGUSR,F_ADDUSR,F_MSG,F_CHGUSR,F_USERMGR,F_REV
 echo "$VALIDFUNCS" |grep "$FUNC" >/dev/null
 if [ $? -ne 0 ];then
 	echo "DEBUG: Given argument ($FUNC) is unknown!"
+	echo "DEBUG: Do have added $FUNC to libs/runFUNCTION.vEMan??"
 	F_EXIT
 else
 	echo "DEBUG: Argument given is valid ($@)"
